# MyCards

./: .gitignore  AGENTS.md  Install-Node-LTS.bat  README.md  Start-MyCards.bat  Start-Web-Only.bat
.github/workflows/: api-ci.yml  web-ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: cards.py  portfolio.py  pricing.py  purchases.py  storage.py  tags.py
apps/api/app/core/: config.py
apps/api/app/db/: init_db.py  seed.py  session.py
apps/api/app/integrations/: __init__.py
apps/api/app/integrations/pricing/: base.py  mock.py  registry.py
apps/api/app/integrations/storage/: local.py  registry.py
apps/api/app/models/: __init__.py  card.py  common.py  pricing.py  reference.py  storage.py  transactions.py
apps/api/app/repositories/: cards.py  pricing.py  purchases.py  storage.py  tags.py
apps/api/app/schemas/: cards.py  portfolio.py  pricing.py  purchases.py  storage.py  tags.py
apps/api/app/services/: cards.py  portfolio.py  pricing.py  purchases.py  storage.py  tags.py
apps/api/app/workers/: price_refresh.py
apps/api/tests/: test_mock_provider.py
apps/web/: .env.example  (+4 more)
docs/: data-model.md  online-deployment.md  product-spec.md  progress.md  project-structure.md  roadmap.md  technical-decisions.md  ui-wireframes.md
infra/: docker-compose.yml
mocks/: README.md
scripts/: install-node-lts.ps1  start-dev.bat  start-dev.ps1  start-web-only.bat  start-web-only.ps1
(+21 files in other folders)
